%% ============================================================================
%% Agent 域 ER 图（v1.0 同步版）
%% 权威依据：附件5：数据库设计文档.docx v1.0（2026-09-14）
%% 说明：
%%  - 库内物理外键关系用实线表达（同库 agent_virtual_lab）。
%%  - USERS / EXPERIMENT_TASK_ASSIGNMENTS / EXPERIMENT_TEMPLATE_VERSIONS /
%%    EXPERIMENT_INSTANCES / EXPERIMENT_REPORT_VERSIONS / FILES 为平台主表
%%    （逻辑实体，由平台迁移建立，Agent 侧不重复建模），以“平台逻辑实体”标注。
%%  - OUTBOX_EVENTS 无物理外键（assignment_id/instance_id 仅冗余检索列）。
%%  - 本图仅表达 Agent 域 13 张表的实体与关系，字段完整定义见 AGENT_DB.md。
%% ============================================================================
erDiagram
    %% 平台逻辑实体
    USERS ||--o{ ASSISTANT_CONVERSATIONS : owns
    EXPERIMENT_TASK_ASSIGNMENTS ||--o{ ASSISTANT_CONVERSATIONS : scopes

    ASSISTANT_CONVERSATIONS ||--o{ AGENT_RUNS : runs
    EXPERIMENT_TASK_ASSIGNMENTS ||--o{ AGENT_RUNS : belongs
    USERS ||--o{ AGENT_RUNS : initiates

    ASSISTANT_CONVERSATIONS ||--o{ ASSISTANT_MESSAGES : contains
    AGENT_RUNS o|--o{ ASSISTANT_MESSAGES : produces

    AGENT_RUNS ||--o{ TOOL_CALL_LOGS : invokes
    EXPERIMENT_TASK_ASSIGNMENTS ||--o{ TOOL_CALL_LOGS : scopes
    USERS o|--o{ TOOL_CALL_LOGS : approves

    %% 评测与模型调用
    EXPERIMENT_TEMPLATE_VERSIONS ||--o{ EVALUATION_RULES : defines

    EXPERIMENT_TASK_ASSIGNMENTS ||--o{ EVALUATION_JOBS : scopes
    EXPERIMENT_REPORT_VERSIONS o|--o{ EVALUATION_JOBS : evaluates
    EXPERIMENT_TEMPLATE_VERSIONS ||--o{ EVALUATION_JOBS : sources
    USERS o|--o{ EVALUATION_JOBS : triggers

    EVALUATION_JOBS ||--o{ EVALUATION_RESULTS : contains
    EXPERIMENT_TASK_ASSIGNMENTS ||--o{ EVALUATION_RESULTS : scopes
    EXPERIMENT_REPORT_VERSIONS o|--o{ EVALUATION_RESULTS : targets
    EVALUATION_RULES ||--o{ EVALUATION_RESULTS : grades
    FILES o|--o{ EVALUATION_RESULTS : evidences

    USERS o|--o{ MODEL_PROVIDERS : updates
    MODEL_PROVIDERS ||--o{ MODEL_CALL_LOGS : serves
    EVALUATION_JOBS o|--o{ MODEL_CALL_LOGS : logs_eval
    AGENT_RUNS o|--o{ MODEL_CALL_LOGS : logs_agent

    %% 可靠性
    USERS ||--o{ NOTIFICATIONS : receives

    EXPERIMENT_TASK_ASSIGNMENTS o|--o{ COMPENSATION_JOBS : compensates
    EXPERIMENT_INSTANCES o|--o{ COMPENSATION_JOBS : compensates_instance
    USERS o|--o{ COMPENSATION_JOBS : resolves

    USERS o|--o{ AUDIT_LOGS : acts
    EXPERIMENT_TASK_ASSIGNMENTS o|--o{ AUDIT_LOGS : audits_assign
    EXPERIMENT_INSTANCES o|--o{ AUDIT_LOGS : audits_instance

    %% ============ 实体定义（关键字段；完整定义见 AGENT_DB.md / 附件5） ============
    USERS {
        bigint id PK "平台逻辑实体"
        string username "登录名"
    }
    EXPERIMENT_TASK_ASSIGNMENTS {
        bigint id PK "平台逻辑实体，聚合根"
        bigint task_id
        bigint user_id
        string status
    }
    EXPERIMENT_TEMPLATE_VERSIONS {
        bigint id PK "平台逻辑实体"
        bigint template_id
        int version_no
    }
    EXPERIMENT_INSTANCES {
        bigint id PK "平台逻辑实体"
        bigint assignment_id
    }
    EXPERIMENT_REPORT_VERSIONS {
        bigint id PK "平台逻辑实体"
        bigint report_id
        int version_no
    }
    FILES {
        bigint id PK "平台逻辑实体"
        string object_key
    }

    ASSISTANT_CONVERSATIONS {
        bigint id PK
        bigint assignment_id FK
        bigint user_id FK
        string status "ACTIVE/CLOSED"
        json context_json "授权对象白名单"
        bigint active_ctx_key "部分唯一:活跃置常量"
        string uq_conv_active "UK(active_ctx_key,user_id)"
    }
    AGENT_RUNS {
        bigint id PK
        bigint conversation_id FK
        bigint assignment_id FK
        bigint user_id FK
        string status "PENDING/RUNNING/SUCCEEDED/FAILED/CANCELLED"
        int tool_call_count "预算限额依据"
        string trace_id
    }
    ASSISTANT_MESSAGES {
        bigint id PK "消息游标"
        bigint conversation_id FK
        bigint run_id FK
        string role "USER/ASSISTANT/SYSTEM/TOOL"
        string content "脱敏"
    }
    TOOL_CALL_LOGS {
        bigint id PK
        bigint run_id FK
        bigint assignment_id FK
        string tool_name
        string high_risk_action "COMMAND_EXEC等"
        string risk_level "LOW/MEDIUM/HIGH"
        string approval_status "NOT_REQUIRED/PENDING/APPROVED/REJECTED/EXPIRED"
        string status "PENDING_APPROVAL/RUNNING/SUCCEEDED/FAILED/DENIED/BLOCKED"
        string approval_token_jti_hash "一次性审批凭据摘要"
        bigint approved_by_id FK
    }
    EVALUATION_RULES {
        bigint id PK
        bigint template_version_id FK
        string rule_code
        string rule_type "COMMAND_EXIT_CODE等"
        string uq_evalrule "UK(template_version_id,rule_code)"
    }
    EVALUATION_JOBS {
        bigint id PK
        bigint assignment_id FK
        bigint report_version_id FK
        bigint template_version_id FK
        string status "PENDING/RUNNING/SUCCEEDED/FAILED/CANCELLED"
        string idempotency_key "UK 防重复触发"
        int attempt_no
    }
    EVALUATION_RESULTS {
        bigint id PK
        bigint job_id FK "父子:一次运行对多规则"
        bigint rule_id FK
        string status "PENDING/RUNNING/PASSED/FAILED/ERROR/SKIPPED"
        decimal score
        bigint evidence_file_id FK
    }
    MODEL_PROVIDERS {
        bigint id PK
        string provider_code "UK"
        string provider_type "OPENAI_COMPATIBLE等"
        string base_url "仅服务端可见"
        string credential_ref "密钥服务引用"
        string health_status "UNKNOWN/HEALTHY/DEGRADED/DOWN"
    }
    MODEL_CALL_LOGS {
        bigint id PK
        string call_type "EVALUATION/AGENT_CHAT/EMBEDDING"
        bigint job_id FK "call_type=EVALUATION时非空"
        bigint run_id FK "call_type=AGENT_CHAT时非空"
        bigint provider_id FK
        string status "SUCCEEDED/FAILED/TIMEOUT/RATE_LIMITED"
        string request_digest "SHA-256"
        string request_object_key "MinIO引用"
    }
    OUTBOX_EVENTS {
        bigint id PK "投递顺序"
        string event_id "UK 消费者去重"
        string aggregate_type "ASSIGNMENT/INSTANCE等"
        bigint aggregate_id
        bigint assignment_id "冗余检索列，无FK"
        bigint instance_id "冗余检索列，无FK"
        string status "PENDING/PUBLISHED/FAILED/DEAD"
    }
    COMPENSATION_JOBS {
        bigint id PK
        string failure_stage "PROVISIONING/ARCHIVING等"
        bigint target_id
        string idempotency_key "UK 人工重试幂等"
        string status "PENDING/RUNNING/SUCCEEDED/FAILED/MANUAL/RESOLVED"
        bigint assignment_id FK
        bigint instance_id FK
        bigint resolved_by_id FK
    }
    NOTIFICATIONS {
        bigint id PK
        bigint user_id FK
        string source_event_id "UK 消费去重"
        string target_type "ASSIGNMENT/REPORT等"
    }
    AUDIT_LOGS {
        bigint id PK
        bigint actor_user_id FK "系统/编排写入为NULL"
        string action "含AGENT_TOOL_APPROVE"
        string target_type "USER/TEMPLATE等"
        string result "SUCCESS/DENIED/FAILURE"
        string trace_id
        bigint assignment_id FK
        bigint instance_id FK
    }
